Splitting provisionally tests/functional and tests/functional_partial to pass the pipeline and overcome MR of EEE-826

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -106,6 +106,7 @@ functional-testing:cpu:
     - pip install .[server,cpu,test]
   script:
     - pytest tests/functional --junit-xml=report.xml --verbose
+    - pytest tests/functional_partial --junit-xml=report.xml --verbose
 
 functional-testing:e2e:
   stage: test
