Movinf docker push from "after_script" to "script"

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -262,7 +262,7 @@ image:release:gpu:
 .template_docker_deploy:
     extends:
       - .template_docker_build
-    after_script:
+    script:
       - docker push "${IMAGE_NAME}"
     
 
