linter and unit tests has no needs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,7 @@ settings:
 
 lint:python:
   stage: lint
+  needs: []
   only:
     - tags
     - merge_requests
@@ -58,6 +59,7 @@ lint:python:
 
 unit-testing:
   stage: test
+  needs: []
   before_script:
     - pip install .[client,server,cpu,test]
   script:
