Revert "now works compiled with torch 2.0.1"
This reverts merge request !286

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,6 @@ settings:
 
 lint:python:
   stage: lint
-  needs: []
   only:
     - tags
     - merge_requests
@@ -59,7 +58,11 @@ lint:python:
 
 unit-testing:
   stage: test
-  needs: []
+  only:
+    - tags
+    - merge_requests
+    - master
+    - web
   before_script:
     - pip install .[client,server,cpu,test]
   script:
