chore: Update 'docker.registry.verbio.com/engineering/devops/debian10-citbx-cpp-rust' docker image tag to '1.11.7' instead of the latest tag that includes python 3.11, a breaking change.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ stages:
   - cleanup
   - speech-center-integration-testing
 
-image: docker.registry.verbio.com/engineering/devops/debian10-citbx-cpp-rust:latest
+image: docker.registry.verbio.com/engineering/devops/debian10-citbx-cpp-rust:1.11.7
 
 variables:
   DOCKER_IMAGE_VERSION: $CI_COMMIT_REF_SLUG
