--- a/deploy/docker/Dockerfile.debian
+++ b/deploy/docker/Dockerfile.debian
@@ -11,7 +11,7 @@ RUN apt update && apt install -y libgomp1
 
 COPY init.sh /init.sh
 COPY server.py /server.py
-COPY asr4-$VERSION-py3-none-any.whl /asr4-$VERSION-py3-none-any.whl
+COPY asr4_streaming-$VERSION-py3-none-any.whl /asr4_streaming-$VERSION-py3-none-any.whl
 COPY asr4-$LANGUAGE-$MODEL_VERSION.onnx /asr4-$LANGUAGE.onnx
 COPY asr4-$LANGUAGE-$MODEL_VERSION.dict.ltr.txt /dict.ltr.txt
 COPY format-model.$LANGUAGE-*.fm /format-model.$LANGUAGE.fm
