--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "asr4"
+name = "asr4-streaming"
 dynamic = ["readme", "description", "version"]
 requires-python = ">=3.7,!=3.11"
 keywords = ["ASR", "CSR"]
@@ -37,7 +37,7 @@ dependencies = [
 include-package-data = false
 
 [tool.setuptools.package-data]
-asr4 = ["../DESCRIPTION.md", "../VERSION"]
+asr4_streaming = ["../DESCRIPTION.md", "../VERSION"]
 
 [tool.setuptools.packages.find]
 exclude = ["tests", "tests.*"]
