--- a/.coveragerc
+++ b/.coveragerc
@@ -1,3 +1,3 @@
 [run]
-omit = asr4/recognizer_v1/types/asr4_pb2*.py
-       asr4/__init__.py
+omit = asr4_streaming/recognizer_v1/types/asr4_pb2*.py
+       asr4_streaming/__init__.py
