--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,32 +60,13 @@ server = [
     "soxr >= 0.3.3",
     "sox >= 1.4.1",
     "scipy >= 1.10.0",
-    "flashlight-text >= 0.0.2",
     "grpcio-health-checking >= 1.47.0",
-    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/c1ee3a199cda22183119db8e149b5d440205c48a65479f0404c709599865fb3c/pyformatter-1.4.2-cp311-cp311-linux_x86_64.whl ; python_version=='3.11' and platform_system=='Linux'",
-    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/2b8875da0a15eb16cbb4e4a13d7f851bdbb511925b47f11d32ef81d7465c516f/pyformatter-1.4.2-cp310-cp310-linux_x86_64.whl ; python_version=='3.10' and platform_system=='Linux'",
-    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/b005e0475cd0f9a260c700a7bf71bb5aa98fb15570c1f6dbc3182c4f914a3c11/pyformatter-1.4.2-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
-    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/f8a64b917b1a402b040f3be30882846199a506a997f3cc3d8c8596ea08b2d045/pyformatter-1.4.2-cp38-cp38-linux_x86_64.whl ; python_version=='3.8' and platform_system=='Linux'",
 ]
 cpu = [
-    "torch @ https://download.pytorch.org/whl/cpu/torch-1.12.1%2Bcpu-cp38-cp38-linux_x86_64.whl ; python_version=='3.8' and platform_system=='Linux'",
-    "torch @ https://__token__:glpat-T_XsetcZptjqx11YLAyG@gitlab.lan.verbio.com/api/v4/projects/1440/packages/pypi/files/8e1ff8348e1ef95add56c33e0c39cf9b1ad03c31b5f36833a116612d11f29c39/torch-1.12.0a0+git8c5c07c-cp39-cp39-linux_x86_64.whl  ; python_version=='3.9' and platform_system=='Linux'",
-    "torch @ https://download.pytorch.org/whl/cpu/torch-1.12.1%2Bcpu-cp310-cp310-linux_x86_64.whl ; python_version=='3.10' and platform_system=='Linux'",
-    "onnx >= 1.13.0",
-    "onnxruntime-dnnl @ https://__token__:glpat-RDpQiPs8C59tD-_t2tHd@gitlab.lan.verbio.com/api/v4/projects/1436/packages/pypi/files/5d364ba10b021fd09fbb2bd29034d2698cc892de406efff1c4a44ee6d743ced5/onnxruntime_dnnl-1.14.0-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
-    "onnxruntime >= 1.13.1 ; python_version!='3.7' and python_version!='3.9'",
-    "numpy @ https://pypi.anaconda.org/intel/simple/numpy/1.22.3/numpy-1.22.3-0-cp39-cp39-manylinux2014_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
-    "simple-ctc @ https://__token__:glpat-WfjrtC5qsrDz34rkc5yD@gitlab.lan.verbio.com/api/v4/projects/1445/packages/pypi/files/cbf64abf1824339194ac608e7d5d4c0135e01bb56c2faac7e923972d7a373fc9/simple_ctc-0.0.1-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
-    "simple-ctc @ git+https://github.com/mthrok/ctcdecode@b1a30d7a65342012e0d2524d9bae1c5412b24a23 ; python_version!='3.7' and python_version!='3.9'"
+    "asr4-engine-wav2vec[cpu,decoder,formatter] @ https://__token__:glpat-REETc2aBAZBgzuD5hu2j@gitlab.lan.verbio.com/api/v4/projects/1560/packages/pypi/files/7af9a049a730215c9bac5dc07785321e7d43f14ca5d89b3bd4799979024fe486/asr4_engine_wav2vec-0.6.14-py3-none-any.whl"
 ]
 gpu = [
-    "torch @ https://download.pytorch.org/whl/cpu/torch-1.12.1%2Bcpu-cp38-cp38-linux_x86_64.whl ; python_version=='3.8' and platform_system=='Linux'",
-    "torch @ https://__token__:glpat-T_XsetcZptjqx11YLAyG@gitlab.lan.verbio.com/api/v4/projects/1450/packages/pypi/files/a924f4ed3fe3f871312a767ec4deffc377498f9109a4895934a33d7fda542b71/torch-2.0.1-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
-    "torch @ https://download.pytorch.org/whl/torch-1.12.1-cp310-cp310-manylinux2014_aarch64.whl ; python_version=='3.10' and platform_system=='Linux'",
-    "onnx >= 1.13.0",
-    "onnxruntime-gpu @ https://__token__:glpat-2aabCj5voGjGLsDZJhZw@gitlab.lan.verbio.com/api/v4/projects/1452/packages/pypi/files/28213e773ada613e73e61489e19807a950f4a139dd49e03d016ee0c7253d9417/onnxruntime_gpu-1.14.0-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
-    "onnxruntime-gpu >= 1.13.1 ; python_version!='3.7' and python_version!='3.9'",
-    "simple-ctc @ https://__token__:glpat-nXw-FysVGGS8-xz24g3x@gitlab.lan.verbio.com/api/v4/projects/1451/packages/pypi/files/09cf6df683d1b3184858eb5ddc0b9860d2e3a7973fa360203489dbaedb155f67/simple_ctc-0.0.1.5-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
+    "asr4-engine-wav2vec[gpu,decoder,formatter] @ https://__token__:glpat-REETc2aBAZBgzuD5hu2j@gitlab.lan.verbio.com/api/v4/projects/1560/packages/pypi/files/7af9a049a730215c9bac5dc07785321e7d43f14ca5d89b3bd4799979024fe486/asr4_engine_wav2vec-0.6.14-py3-none-any.whl"
 ]
 test = [
     "pytest >= 6.2.5",
