Changing launch_server to use toml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -90,7 +90,7 @@ functional-testing:endpoints:
     - wget https://github.com/freshautomations/stoml/releases/download/v0.7.1/stoml_linux_amd64 -O /bin/stoml && chmod +x /bin/stoml
     - pip install .[client,server,cpu,test]
     - export MODEL_VERSION=$(stoml asr4_config.toml en-us.cpu_version)
-    - bash tests/integration/launch_server.sh ${MODELS_PATH}/wav2vec_small_10m.dynamic.uint8.onnx ${MODELS_PATH}/wav2vec_small_10m.dynamic.uint8.dict.ltr.txt ${MODELS_PATH}/formatter/ en-us
+    - bash tests/integration/launch_server.sh tests/integration/data/asr4_streaming_config_en-us.toml
   script:
     - cd tests/functional/data
     - bash ../streaming_tests.sh
@@ -119,7 +119,7 @@ functional-testing:e2e:
     - python -m venv venv-server
     - . ./venv-server/bin/activate
     - pip install .[server,cpu]
-    - bash tests/integration/launch_server.sh ${MODELS_PATH}/wav2vec_small_10m.dynamic.uint8.onnx ${MODELS_PATH}/wav2vec_small_10m.dynamic.uint8.dict.ltr.txt ${MODELS_PATH}/formatter/ en-us
+    - bash tests/integration/launch_server.sh tests/integration/data/asr4_streaming_config_en-us.toml
   script:
     - apt-get -y -q update && apt-get install -y asrtest-eval
     - deactivate
@@ -141,7 +141,7 @@ integration-testing:cpu:
     - pip install .[client,server,cpu,test]
     - wget https://github.com/freshautomations/stoml/releases/download/v0.7.1/stoml_linux_amd64 -O /bin/stoml && chmod +x /bin/stoml
     - export MODEL_VERSION=$(stoml asr4_config.toml ${LANGUAGE}.cpu_version)
-    - bash tests/integration/launch_server.sh ${MODELS_PATH}/wav2vec_small_10m.dynamic.uint8.onnx ${MODELS_PATH}/wav2vec_small_10m.dynamic.uint8.dict.ltr.txt ${MODELS_PATH}/formatter/ $LANGUAGE 0
+    - bash tests/integration/launch_server.sh tests/integration/data/asr4_streaming_config_en-us.toml 0
     # Install the remaining testing dependencies
     - !reference [.template:integration-testing, before_script]
 
@@ -161,7 +161,7 @@ integration-testing:gpu:
     - CUDACXX=/usr/local/cuda/bin/nvcc LDFLAGS="-L/intelpython/python3.9/lib/ -liomp5" pip install .[client,server,gpu,test]
     - wget https://github.com/freshautomations/stoml/releases/download/v0.7.1/stoml_linux_amd64 -O /bin/stoml && chmod +x /bin/stoml
     - export MODEL_VERSION=$(stoml asr4_config.toml ${LANGUAGE}.gpu_version)
-    - bash tests/integration/launch_server.sh ${MODELS_PATH}/wav2vec_small_10m.dynamic.uint8.onnx ${MODELS_PATH}/wav2vec_small_10m.dynamic.uint8.dict.ltr.txt ${MODELS_PATH}/formatter/ $LANGUAGE 1
+    - bash tests/integration/launch_server.sh tests/integration/data/asr4_streaming_config_en-us.toml 1
     - wget -O - https://pkg-repos.lan.verbio.com/gpg/internal/deb/F2EACE0B.gpg.key | apt-key add -
     - echo 'deb https://pkg-repos.lan.verbio.com/deb/internal jessie stable' | tee /etc/apt/sources.list.d/verbio-internal.list
     # Install the remaining testing dependencies
