--- a/deploy/docker/Dockerfile.debian
+++ b/deploy/docker/Dockerfile.debian
@@ -16,7 +16,7 @@ COPY asr4-$LANGUAGE-$MODEL_VERSION.onnx /asr4-$LANGUAGE.onnx
 COPY asr4-$LANGUAGE-$MODEL_VERSION.dict.ltr.txt /dict.ltr.txt
 COPY format-model.$LANGUAGE-*.fm /format-model.$LANGUAGE.fm
 COPY dummy asr4-$LANGUAGE-lm.* /
-COPY asr4_config.toml /
+COPY asr4_streamin_config_$LANGUAGE.toml /
 
 RUN pip install asr4_streaming-$VERSION-py3-none-any.whl[server,cpu]
 RUN python -m pip install intel_extension_for_pytorch -f https://software.intel.com/ipex-whl-stable-cpu
