--- a/deploy/docker/Dockerfile.debian
+++ b/deploy/docker/Dockerfile.debian
@@ -12,8 +12,8 @@ RUN apt update && apt install -y libgomp1
 COPY init.sh /init.sh
 COPY server.py /server.py
 COPY asr4_streaming-$VERSION-py3-none-any.whl /asr4_streaming-$VERSION-py3-none-any.whl
-COPY asr4-$LANGUAGE-$MODEL_VERSION.onnx /asr4-$LANGUAGE.onnx
-COPY asr4-$LANGUAGE-$MODEL_VERSION.dict.ltr.txt /dict.ltr.txt
+COPY asr4-$LANGUAGE-$MODEL_VERSION.onnx /w2v-$LANGUAGE-$MODEL_VERSION.onnx
+COPY asr4-$LANGUAGE-$MODEL_VERSION.dict.ltr.txt /w2v-$LANGUAGE-$MODEL_VERSION.dict.ltr.txt
 COPY format-model.$LANGUAGE-*.fm /format-model.$LANGUAGE.fm
 COPY dummy asr4-$LANGUAGE-lm.* /
 COPY asr4_streaming_config_$LANGUAGE.toml /
