Adding mock dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,5 +72,6 @@ gpu = [
 test = [
     "pytest >= 6.2.5",
     "pytest-cov >= 3.0.0",
-    "jiwer >= 2.5.1"
+    "jiwer >= 2.5.1",
+    "mock >= 5.1.0"
 ]
