--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -252,9 +252,8 @@ image:release:gpu:
     - cp ${MODELS_PATH}/wav2vec_small_10m.dynamic.uint8.dict.ltr.txt deploy/docker/
     - cp $(ls ${MODELS_PATH}/formatter/format-model.${LANGUAGE}* | head -n 1) deploy/docker/
     - cp asr4_streaming_config_${LANGUAGE}.toml deploy/docker/
-    - cp ${MODELS_PATH}/asr4-${LANGUAGE}-lm-${LM_VERSION}.bin deploy/docker/asr4-${LANGUAGE}-lm.bin || true
-    - cp ${MODELS_PATH}/asr4-${LANGUAGE}-lm-${LM_VERSION}.lexicon.txt deploy/docker/asr4-${LANGUAGE}-lm.lexicon.txt || true
-    - touch deploy/docker/dummy
+    - cp ${MODELS_PATH}/asr4-${LANGUAGE}-lm-${LM_VERSION}.bin deploy/docker/
+    - cp ${MODELS_PATH}/asr4-${LANGUAGE}-lm-${LM_VERSION}.lexicon.txt deploy/docker/
     - cp bin/server.py deploy/docker/
   script:
     - docker build --pull deploy/docker/ -f deploy/docker/${DOCKERFILE} --build-arg MODEL_VERSION=${MODEL_VERSION} --build-arg LM_VERSION=${LM_VERSION} --build-arg VERSION=${SERVICE_VERSION} --build-arg LANGUAGE=${LANGUAGE} -t "${IMAGE_NAME}"
