--- a/asr4_streaming_config_en-us.toml
+++ b/asr4_streaming_config_en-us.toml
@@ -1,5 +1,10 @@
 [global]
 language = "en-US"
+model = "asr4-en-us-1.3.0.onnx"
+vocabulary = "asr4-en-us-1.3.0.dict.ltr.txt"
+lm_algorithm = "kenlm"
+lm_model = "asr4-en-us-lm-1.2.0.bin"
+lexicon = "asr4-en-us-lm-1.2.0.lexicon.txt"
 listeners = 1
 workers = 0
 verbose = "INFO"
