--- a/asr4_streaming_config_pt-br.toml
+++ b/asr4_streaming_config_pt-br.toml
@@ -1,6 +1,11 @@
 
 [global]
 language = "pt-BR"
+model = "asr4-pt-br-1.3.0.onnx"
+vocabulary = "asr4-pt-br-1.3.0.dict.ltr.txt"
+lm_algorithm = "kenlm"
+lm_model = "asr4-pt-br-lm-1.2.0.bin"
+lexicon = "asr4-pt-br-lm-1.2.0.lexicon.txt"
 listeners = 1
 workers = 0
 verbose = "INFO"
