--- a/asr4_streaming_config_en-us.toml
+++ b/asr4_streaming_config_en-us.toml
@@ -1,10 +1,10 @@
 [global]
 language = "en-US"
-model = "asr4-en-us-1.3.0.onnx"
-vocabulary = "asr4-en-us-1.3.0.dict.ltr.txt"
+model = "w2v-en-us-1.3.0.onnx"
+vocabulary = "w2v-en-us-1.3.0.dict.ltr.txt"
 lm_algorithm = "kenlm"
-lm_model = "asr4-en-us-lm-1.2.0.bin"
-lexicon = "asr4-en-us-lm-1.2.0.lexicon.txt"
+lm_model = "w2v-en-us-lm-1.2.0.bin"
+lexicon = "w2v-en-us-lm-1.2.0.lexicon.txt"
 listeners = 1
 workers = 0
 verbose = "INFO"
