--- a/tests/integration/data/asr4_streaming_config_es.toml
+++ b/tests/integration/data/asr4_streaming_config_es.toml
@@ -1,7 +1,7 @@
 [global]
 language = "es"
 workers = 0
-model = "/mnt/shared/squad2/projects/asr4models/wav2vec_small_10m.dynamic.uint8.onnx"
+model = "/mnt/shared/squad2/projects/asr4models/wav2vec_small_10m.static.10s.onnx"
 vocabulary = "/mnt/shared/squad2/projects/asr4models/wav2vec_small_10m.dynamic.uint8.dict.ltr.txt"
 lm_algorithm = "kenlm"
 lm_model = "/mnt/shared/squad2/projects/asr4models/asr4-en-us-lm-1.2.0.bin"
