Separate pip install according to device

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -274,6 +274,8 @@ testing:formatting-testing:cpu:
       command: ["env", "/bin/bash", "-c", "/init.sh"]
   variables:
     ASR4_HOSTNAME: asr4-server
+  before_script:
+    - pip install .[cpu]
   script:
     - python3 --version
     - pytest tests/integration/test_formatter.py --junit-xml=report.xml --verbose --capture=no
@@ -283,6 +285,7 @@ testing:formatting-testing:gpu:
   tags:
     - gpu
   before_script:
+    - pip install .[gpu]
     # Install docker to run ASR4 server docker
     - !reference [.install-docker, before_script]
     # Launch ASR4 server on GPU
@@ -308,12 +311,15 @@ testing:integration-testing:cpu:
       command: ["env", "/bin/bash", "-c", "/init.sh"]
   variables:
     ASR4_HOSTNAME: asr4-server
+  before_script:
+    - pip install .[cpu]
 
 testing:integration-testing:gpu:
   extends: .template:integration-testing
   tags:
     - gpu
   before_script:
+    - pip install .[gpu]
     # Install docker to run ASR4 server docker
     - !reference [.install-docker, before_script]
     # Launch ASR4 server on GPU
@@ -338,7 +344,7 @@ testing:integration-testing:gpu:
       - LANGUAGE: [en-us, es, pt-br]
   before_script:
     - apt-get update && apt-get install -y asrtest-eval libffi-dev
-    - pip install .[client,cpu,test]
+    - pip install .[client,test]
   script:
     - python3 --version
     - pytest tests/integration/test_recognizer_service.py --junit-xml=report.xml --verbose --capture=no
