--- a/asr4_streaming_config_en-us.toml
+++ b/asr4_streaming_config_en-us.toml
@@ -5,6 +5,7 @@ vocabulary = "w2v-en-us-1.3.0.dict.ltr.txt"
 lm_algorithm = "kenlm"
 lm_model = "w2v-en-us-lm-1.2.0.bin"
 lexicon = "w2v-en-us-lm-1.2.0.lexicon.txt"
+decoding_type = "LOCAL"
 listeners = 1
 workers = 0
 verbose = "INFO"
