--- a/asr4_streaming_config_pt-br.toml
+++ b/asr4_streaming_config_pt-br.toml
@@ -6,6 +6,7 @@ vocabulary = "w2v-pt-br-1.3.0.dict.ltr.txt"
 lm_algorithm = "kenlm"
 lm_model = "w2v-pt-br-lm-1.2.0.bin"
 lexicon = "w2v-pt-br-lm-1.2.0.lexicon.txt"
+decoding_type = "LOCAL"
 listeners = 1
 workers = 0
 verbose = "INFO"
