Update ceviche version

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -403,7 +403,7 @@ asr4:benchmark:
 
 update-changelog:
   stage: update-changelog
-  image: docker.registry.verbio.com/engineering/devops/debian10-citbx:1.11.4
+  image: docker.registry.verbio.com/engineering/devops/debian10-citbx:latest
   only:
     - tags
   except:
