--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,9 @@ dependencies = [
     "logger >= 1.4",
 ]
 
+[tool.pytest.ini_options]
+addopts = "--ignore=tests/functional/test_long_files.py"
+
 [tool.setuptools]
 include-package-data = false
 
