--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,14 @@
+include:
+  remote: 'https://gitlab.com/gitlab-org/gitlab/-/raw/2851f4d5/lib/gitlab/ci/templates/Jobs/SAST.latest.gitlab-ci.yml'
+
 stages:
-  - lint
   - test
-  - package
+  - unit-tests
+  - functional-tests
+  - integration-tests
+  - build-package
   - build-image
-  - integration-testing
+  - integration-tests-with-docker
   - promote-to-staging
   - end2end-testing
   - update-changelog
@@ -17,14 +22,15 @@ variables:
   DOCKER_IMAGE_VERSION: $CI_COMMIT_REF_SLUG
   MODELS_PATH: /mnt/shared/squad2/projects/asr4models/
   VERBIO_REGISTRY_URL: docker.registry.verbio.com
-  AWS_ECR_URL: 321880733545.dkr.ecr.us-east-1.amazonaws.com
-  SPEECH_CENTER_AWS_ECR_URL: 321880733545.dkr.ecr.us-east-2.amazonaws.com
-  AWS_REGION: us-east-1
-  AWS_SC_REGION: us-east-2
   DOCKER_TESTING_IMAGE_NAME:  csr/testing/asr4
   DOCKER_STAGING_IMAGE_NAME:  csr/staging/asr4
   DOCKER_STABLE_IMAGE_NAME:   csr/stable/asr4
   DOCKER_SPEECH_CENTER_IMAGE_NAME: voice-center/testing/asr4
+  AWS_REGION: us-east-1
+  AWS_SC_REGION: us-east-2
+  AWS_ECR_URL: 321880733545.dkr.ecr.us-east-1.amazonaws.com
+  SPEECH_CENTER_AWS_ECR_URL: 321880733545.dkr.ecr.us-east-2.amazonaws.com
+
 
 settings:
   stage: .pre
@@ -39,15 +45,11 @@ settings:
     reports:
       dotenv: settings.env
 
+
 lint:python:
-  stage: lint
-  only:
-    - tags
-    - merge_requests
-    - pushes
-    - branches
-    - master
-    - web
+  stage: unit-tests
+  rules:
+    - when: always
   before_script:
     - pip install flake8==3.9.2 black==22.6.0
   script:
@@ -55,14 +57,10 @@ lint:python:
     - flake8 --exit-zero --show-source --statistics
 
 
-
 unit-testing:
-  stage: test
-  only:
-    - tags
-    - merge_requests
-    - master
-    - web
+  stage: unit-tests
+  rules:
+    - when: always
   before_script:
     - pip install .[client,server,cpu,test]
   script:
@@ -76,27 +74,10 @@ unit-testing:
       - coverage/**
   coverage: '/^TOTAL\s+\d+\s+\d+\s+(\d+\.?\d*)\%$/'
 
-functional-testing:endpoints:
-  stage: test
-  only:
-    - tags
-    - merge_requests
-    - master
-    - web
-  before_script:
-    - wget https://github.com/bojand/ghz/releases/download/v0.111.0/ghz-linux-x86_64.tar.gz
-    - tar -xzf ghz-linux-x86_64.tar.gz
-    - mv ghz /bin
-    - wget https://github.com/freshautomations/stoml/releases/download/v0.7.1/stoml_linux_amd64 -O /bin/stoml && chmod +x /bin/stoml
-    - pip install .[client,server,cpu,test]
-    - export MODEL_VERSION=$(stoml asr4_config.toml en-us.cpu_version)
-    - bash tests/integration/launch_server.sh tests/integration/data/asr4_streaming_config_en-us.toml
-  script:
-    - cd tests/functional/data
-    - bash ../streaming_tests.sh
 
-functional-testing:cpu:
-  stage: test
+functional-testing:
+  stage: functional-tests
+  needs: ["unit-testing"]
   only:
     - tags
     - merge_requests
@@ -106,10 +87,29 @@ functional-testing:cpu:
     - pip install .[server,cpu,test]
   script:
     - pytest tests/functional --junit-xml=report.xml --verbose
-    - pytest tests/functional_partial --junit-xml=report.xml --verbose
+
+
+functional-testing:long-audios:
+  stage: functional-tests
+  needs: ["unit-testing"]
+  image: docker.registry.verbio.com/csr/devops/asr4-base-gpu:latest
+  tags:
+    - gpu
+  only:
+    - tags
+    - merge_requests
+    - main
+    - web
+  before_script:
+    - pip install .[server,gpu,test]
+  script:
+    - export W2V_GPU=true
+    - pytest tests/functional/test_long_files.py --verbose --capture=no
+
 
 functional-testing:e2e:
-  stage: test
+  stage: functional-tests
+  needs: ["unit-testing"]
   only:
     - tags
     - merge_requests
@@ -130,8 +130,8 @@ functional-testing:e2e:
 
 
 integration-testing:cpu:
-  extends: .template:integration-testing
-  stage: test
+  stage: integration-tests
+  needs: ["unit-testing"]
   only:
     - tags
     - merge_requests
@@ -142,18 +142,14 @@ integration-testing:cpu:
     - wget https://github.com/freshautomations/stoml/releases/download/v0.7.1/stoml_linux_amd64 -O /bin/stoml && chmod +x /bin/stoml
     - export MODEL_VERSION=$(stoml asr4_config.toml ${LANGUAGE}.cpu_version)
     - bash tests/integration/launch_server.sh tests/integration/data/asr4_streaming_config_${LANGUAGE}.toml 0
-    # Install the remaining testing dependencies
-    - !reference [.template:integration-testing, before_script]
+    - apt-get update && apt-get install -y asrtest-eval libffi-dev
+  script:
+    - pytest tests/integration -rA --junit-xml=report.xml --verbose --capture=no
+
 
 integration-testing:gpu:
-  extends: .template:integration-testing
-  stage: test
+  extends: integration-testing:cpu
   image: docker.registry.verbio.com/engineering/devops/debian10-intel-oneapi-python-cuda-tensorrt:3.9
-  only:
-    - tags
-    - merge_requests
-    - web
-    - master
   tags:
     - gpu
   before_script:
@@ -164,15 +160,17 @@ integration-testing:gpu:
     - bash tests/integration/launch_server.sh tests/integration/data/asr4_streaming_config_${LANGUAGE}.toml 1
     - wget -O - https://pkg-repos.lan.verbio.com/gpg/internal/deb/F2EACE0B.gpg.key | apt-key add -
     - echo 'deb https://pkg-repos.lan.verbio.com/deb/internal jessie stable' | tee /etc/apt/sources.list.d/verbio-internal.list
-    # Install the remaining testing dependencies
-    - !reference [.template:integration-testing, before_script]
+    - apt-get update && apt-get install -y asrtest-eval libffi-dev
+  script:
+    - pytest tests/integration -rA --junit-xml=report.xml --verbose --capture=no
 
 
-build:python:
-  stage: package
+build-package:python:
+  stage: build-package
   only:
     - tags
     - merge_requests
+    - web
   before_script:
     - echo JOB_ID=$CI_JOB_ID >> settings.env
     - echo "DOCKER_IMAGE_VERSION = ${DOCKER_IMAGE_VERSION}" >> settings.env
@@ -192,44 +190,47 @@ build:python:
     reports:
       dotenv: settings.env
 
-image:build:cpu:
+
+build-image:build:cpu:
   variables:
     IMAGE_NAME: "${VERBIO_REGISTRY_URL}/${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     DOCKERFILE: "Dockerfile.debian"
     DEVICE: "cpu"
-  extends: .template_docker_build
+  extends: .template:docker_build
   only:
+    - web
     - merge_requests
 
-image:build:gpu:
+build-image:build:gpu:
   variables:
     IMAGE_NAME: "${VERBIO_REGISTRY_URL}/${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     DEVICE: "gpu"
     DOCKERFILE: "Dockerfile.debian-gpu"
-  extends: .template_docker_build
+  extends: .template:docker_build
   only:
+    - web
     - merge_requests
 
-image:release:cpu:
+
+build-image:release:cpu:
   variables:
     IMAGE_NAME: "${VERBIO_REGISTRY_URL}/${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     DOCKERFILE: "Dockerfile.debian"
     DEVICE: "cpu"
-  extends: .template_docker_deploy
+  extends: .template:docker_deploy
   only:
     - tags
 
-image:release:gpu:
+build-image:release:gpu:
   variables:
     IMAGE_NAME: "${VERBIO_REGISTRY_URL}/${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     DEVICE: "gpu"
     DOCKERFILE: "Dockerfile.debian-gpu"
-  extends: .template_docker_deploy
+  extends: .template:docker_deploy
   only: 
     - tags
 
-
-.template_docker_build:
+.template:docker_build:
   stage: build-image
   image: docker:20.10.15
   needs: ["build:python"]
@@ -237,123 +238,91 @@ image:release:gpu:
     matrix:
       - LANGUAGE: [en-us, es, pt-br]
   before_script:
-    - echo "IMAGE_NAME=${IMAGE_NAME}"
-    - wget https://github.com/freshautomations/stoml/releases/download/v0.7.1/stoml_linux_amd64 -O /bin/stoml && chmod +x /bin/stoml
-    - export MODEL_VERSION=$(stoml asr4_streaming_config_${LANGUAGE}.toml global.${DEVICE}_version)
-    - echo ${MODEL_VERSION}
-    - SERVICE_VERSION=$(cat VERSION)
-    - echo SERVICE_VERSION=${SERVICE_VERSION}
-    - export LM_VERSION=$(stoml asr4_streaming_config_${LANGUAGE}.toml global.lm_version)
-    - echo LM_VERSION=${LM_VERSION}
-    - mv *.whl deploy/docker/
+    - !reference [.export-docker-build-env, before_script]
     - cp ${MODELS_PATH}/asr4-${LANGUAGE}-${MODEL_VERSION}.onnx deploy/docker/
     - cp ${MODELS_PATH}/asr4-${LANGUAGE}-${MODEL_VERSION}.dict.ltr.txt deploy/docker/
     - cp ${MODELS_PATH}/wav2vec_small_10m.dynamic.uint8.onnx deploy/docker/
     - cp ${MODELS_PATH}/wav2vec_small_10m.dynamic.uint8.dict.ltr.txt deploy/docker/
-    - cp $(ls ${MODELS_PATH}/formatter/format-model.${LANGUAGE}* | head -n 1) deploy/docker/
-    - cp asr4_streaming_config_${LANGUAGE}.toml deploy/docker/
     - cp ${MODELS_PATH}/asr4-${LANGUAGE}-lm-${LM_VERSION}.bin deploy/docker/
     - cp ${MODELS_PATH}/asr4-${LANGUAGE}-lm-${LM_VERSION}.lexicon.txt deploy/docker/
+    - cp $(ls ${MODELS_PATH}/formatter/format-model.${LANGUAGE}* | head -n 1) deploy/docker/
+    - mv *.whl deploy/docker/
+    - cp asr4_streaming_config_${LANGUAGE}.toml deploy/docker/
     - cp bin/server.py deploy/docker/
   script:
-    - docker build --pull deploy/docker/ -f deploy/docker/${DOCKERFILE} --build-arg MODEL_VERSION=${MODEL_VERSION} --build-arg LM_VERSION=${LM_VERSION} --build-arg VERSION=${SERVICE_VERSION} --build-arg LANGUAGE=${LANGUAGE} -t "${IMAGE_NAME}"
-    
-.template_docker_deploy:
-    extends:
-      - .template_docker_build
-    script:
-      - !reference [.template_docker_build, script]
+    - docker build --pull deploy/docker/ -f deploy/docker/${DOCKERFILE} --build-arg PIPELINE=${CI_PIPELINE_IID} --build-arg VERSION=${SERVICE_VERSION} --build-arg LANGUAGE=${LANGUAGE} --build-arg MODEL_VERSION=${MODEL_VERSION} --build-arg LM_VERSION=${LM_VERSION} -t "${IMAGE_NAME}"
+
+.export-docker-build-env:
+  before_script:
+    - wget https://github.com/freshautomations/stoml/releases/download/v0.7.1/stoml_linux_amd64 -O /bin/stoml && chmod +x /bin/stoml
+    - export MODEL_VERSION=$(stoml asr4_streaming_config_${LANGUAGE}.toml global.${DEVICE}_version)
+    - echo MODEL_VERSION=${MODEL_VERSION}
+    - export LM_VERSION=$(stoml asr4_streaming_config_${LANGUAGE}.toml global.lm_version)
+    - echo LM_VERSION=${LM_VERSION}
+    - SERVICE_VERSION=$(cat VERSION)
+    - echo SERVICE_VERSION=${SERVICE_VERSION}
+    - echo "IMAGE_NAME=${IMAGE_NAME}"
+
+.template:docker_deploy:
+    extends: .template:docker_build
+    after_script:
       - docker push "${IMAGE_NAME}"
+      - docker pull "${IMAGE_NAME}"
     
 
-testing:formatting-testing:cpu:
-  extends: .template:integration-testing
-  services:
-    - name: ${VERBIO_REGISTRY_URL}/${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
-      alias: asr4-server
-      command: ["env", "/bin/bash", "-c", "/init.sh"]
+testing:integration-tests-with-docker:cpu:
+  extends: .template:integration-testing-docker
   variables:
-    ASR4_HOSTNAME: asr4-server
-  before_script:
-    - !reference [.template:integration-testing, before_script]
-    - pip install .[cpu]
-  script:
-    - python3 --version
-    - pytest tests/integration/test_formatter.py --junit-xml=report.xml --verbose --capture=no
+    DEVICE: "cpu"
 
-testing:formatting-testing:gpu:
-  extends: .template:integration-testing
+testing:integration-tests-with-docker:gpu:
+  extends: .template:integration-testing-docker
+  variables:
+    DEVICE: "gpu"
   tags:
     - gpu
-  before_script:
-    # Install docker to run ASR4 server docker
-    - !reference [.install-docker, before_script]
-    # Launch ASR4 server on GPU
-    - export JOB_DOCKER_ID=$(docker ps -q -f "label=com.gitlab.gitlab-runner.job.id=$CI_JOB_ID" -f "label=com.gitlab.gitlab-runner.type=build")
-    - docker kill asr4-gpu-${LANGUAGE} || true && docker rm asr4-gpu-${LANGUAGE} || true
-    - docker run --name asr4-gpu-${LANGUAGE} -d --gpus=all --network="container:$JOB_DOCKER_ID" -e LOG_LEVEL=DEBUG ${VERBIO_REGISTRY_URL}/${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
-    - sleep 30
-    # Install the remaining testing dependencies
-    - !reference [.template:integration-testing, before_script]
-    - pip install .[cpu]
-  after_script:
-    - nvidia-smi
-    - docker logs asr4-gpu-${LANGUAGE}
-    - docker kill asr4-gpu-${LANGUAGE} && docker rm asr4-gpu-${LANGUAGE}
-  script:
-    - python3 --version
-    - pytest tests/integration/test_formatter.py --junit-xml=report.xml --verbose --capture=no
 
-testing:integration-testing:cpu:
-  extends: .template:integration-testing
-  services:
-    - name: ${VERBIO_REGISTRY_URL}/${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
-      alias: asr4-server
-      command: ["env", "/bin/bash", "-c", "/init.sh"]
-  variables:
-    ASR4_HOSTNAME: asr4-server
-  before_script:
-    - !reference [.template:integration-testing, before_script]
-    - pip install .[cpu]
-
-testing:integration-testing:gpu:
-  extends: .template:integration-testing
-  tags:
-    - gpu
-  before_script:
-    # Install docker to run ASR4 server docker
-    - !reference [.install-docker, before_script]
-    # Launch ASR4 server on GPU
-    - export JOB_DOCKER_ID=$(docker ps -q -f "label=com.gitlab.gitlab-runner.job.id=$CI_JOB_ID" -f "label=com.gitlab.gitlab-runner.type=build")
-    - docker kill asr4-gpu-${LANGUAGE} || true && docker rm asr4-gpu-${LANGUAGE} || true
-    - docker run --name asr4-gpu-${LANGUAGE} -d --gpus=all --network="container:$JOB_DOCKER_ID" -e LOG_LEVEL=DEBUG ${VERBIO_REGISTRY_URL}/${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
-    - sleep 30
-    # Install the remaining testing dependencies
-    - !reference [.template:integration-testing, before_script]
-    - pip install .[cpu]
-  after_script:
-    - nvidia-smi
-    - docker logs asr4-gpu-${LANGUAGE}
-    - docker kill asr4-gpu-${LANGUAGE} && docker rm asr4-gpu-${LANGUAGE}
-
-
-.template:integration-testing:
-  stage: integration-testing
+.template:integration-testing-docker:
+  stage: integration-tests-with-docker
   only:
     - tags
+    - web
   parallel:
     matrix:
       - LANGUAGE: [en-us, es, pt-br]
   before_script:
+    - !reference [.install-docker, before_script]
+    - !reference [.run-docker-image, before_script]
     - apt-get update && apt-get install -y asrtest-eval libffi-dev
-    - pip install .[client,test]
+    - pip install .[client,cpu,test]
+    - !reference [.run-docker-image, script]
   script:
-    - python3 --version
     - pytest tests/integration/test_recognizer_service.py --junit-xml=report.xml --verbose --capture=no
-  artifacts:
-    expire_in: 5 days
-    reports:
-      junit: report.xml
+    - pytest tests/integration/test_formatter.py --junit-xml=report.xml --verbose --capture=no
+  after_script:
+    - !reference [.run-docker-image, after_script]
+
+.run-docker-image:
+  variables:
+    DEVICE: "cpu"    
+  before_script:
+    # Get JOB DOCKER ID to run the ASR4-batch container in the same docker network
+    - export JOB_DOCKER_ID=$(docker ps -q -f "label=com.gitlab.gitlab-runner.job.id=$CI_JOB_ID" -f "label=com.gitlab.gitlab-runner.type=build")
+    # Kill any lingering ASR4 instance
+    - docker kill asr4-${DEVICE}-${LANGUAGE} || true && docker rm asr4-${DEVICE}-${LANGUAGE} || true
+  script:
+    - >
+      if [ "${DEVICE}" == "cpu" ]; then
+        docker run --name asr4-${DEVICE}-${LANGUAGE} -d --network="container:$JOB_DOCKER_ID" -e LOG_LEVEL="DEBUG" ${VERBIO_REGISTRY_URL}/${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
+      else
+        docker run --name asr4-${DEVICE}-${LANGUAGE} -d --gpus=all --network="container:$JOB_DOCKER_ID" -e LOG_LEVEL="DEBUG" ${VERBIO_REGISTRY_URL}/${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
+      fi
+    - sleep 30
+  after_script:
+    # Show ASR4-batch logs before killing the instance
+    - docker logs asr4-${DEVICE}-${LANGUAGE} || true
+    # Kill ASR4-batch instance
+    - docker kill asr4-${DEVICE}-${LANGUAGE} || true && docker rm asr4-batch-${DEVICE}-${LANGUAGE} || true
 
 .install-docker:
   before_script:
@@ -363,10 +332,9 @@ testing:integration-testing:gpu:
     - apt-get update && apt-get install -y docker-ce docker-ce-cli containerd.io
 
 
-
 staging:promote:
   stage: promote-to-staging
-  image: docker:20.10.15
+  image: docker:24
   only:
     - tags
   parallel:
@@ -403,7 +371,7 @@ asr4:benchmark:
 
 update-changelog:
   stage: update-changelog
-  image: docker.registry.verbio.com/engineering/devops/debian10-citbx:1.11.4
+  image: docker.registry.verbio.com/engineering/devops/debian10-citbx:latest
   only:
     - tags
   except:
@@ -414,7 +382,7 @@ update-changelog:
 
 stable:promote:
   stage: promote-to-stable
-  image: docker:20.10.15
+  image: docker:24
   only:
     - tags
   parallel:
@@ -433,7 +401,7 @@ stable:promote:
 
 speech-center:promote:
   stage: promote-to-stable
-  image: docker:20.10.15
+  image: docker:24
   only:
     - tags
   parallel:
@@ -464,13 +432,14 @@ speech-center:promote:
 
 cleanup:
   stage: cleanup
-  image: docker:20.10.15
+  image: docker:24
   only:
     - tags
     - merge_requests
   script:
-    - docker images --filter 'label=service=asr4'
-    - docker images --filter 'label=service=asr4' -q | xargs -r docker image rm --force
+    - docker images --filter "label=service=asr4-batch" --filter "label=pipeline=${CI_PIPELINE_IID}"
+    - docker images --filter "label=service=asr4-batch" --filter "label=pipeline=${CI_PIPELINE_IID}" -q | xargs -r docker image rm --force
+
 
 speech-center-integration-testing:en-us:cpu:
   variables:
@@ -513,7 +482,6 @@ speech-center-integration-testing:pt-br:gpu:
     # A Gitlab bug requires this variable to be CI_COMMIT_TAG instead of DOCKER_IMAGE_VERSION
     TEST_SERVICE_COMMIT_TAG: ${CI_COMMIT_TAG}
   extends: .template:speech-center-integration-testing
-
 
 .template:speech-center-integration-testing:
   stage: speech-center-integration-testing
