--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -137,6 +137,9 @@ integration-testing:cpu:
     - merge_requests
     - web
     - master
+  parallel:
+    matrix:
+      - LANGUAGE: [en-us, es, pt-br]
   before_script:
     - pip install .[client,server,cpu,test]
     - wget https://github.com/freshautomations/stoml/releases/download/v0.7.1/stoml_linux_amd64 -O /bin/stoml && chmod +x /bin/stoml
