--- a/asr4_streaming_config_es.toml
+++ b/asr4_streaming_config_es.toml
@@ -1,10 +1,10 @@
 [global]
 language = "es"
-model = "/mnt/shared/squad/projects/asr4models/asr4-es-1.3.0.onnx"
-vocabulary = "/mnt/shared/squad/projects/asr4models/asr4-es-1.3.0.dict.ltr.txt"
+model = "w2v-es-1.3.0.onnx"
+vocabulary = "w2v-es-1.3.0.dict.ltr.txt"
 lm_algorithm = "kenlm"
-lm_model = "/mnt/shared/squad/projects/asr4models/asr4-es-lm-1.2.0.bin"
-lexicon = "/mnt/shared/squad/projects/asr4models/asr4-es-lm-1.2.0.lexicon.txt"
+lm_model = "w2v-es-lm-1.2.0.bin"
+lexicon = "w2v-es-lm-1.2.0.lexicon.txt"
 decoding_type = "LOCAL"
 listeners = 1
 workers = 0
@@ -17,4 +17,4 @@ lm_version = "1.2.0"
 lm_weight = "0.91447"
 word_score = "-0.56194"
 sil_score = "0.44272"
-formatter = "/mnt/shared/squad/projects/asr4models/formatter/format-model.es-es-1.1.0.fm"
+formatter = "format-model.es.fm"
