fix: Change gitlab-ci job branch precondition from 'main' to 'master'.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,7 +98,7 @@ functional-testing:long-audios:
   only:
     - tags
     - merge_requests
-    - main
+    - master
     - web
   before_script:
     - pip install .[server,gpu,test]
