--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -104,6 +104,7 @@ functional-testing:long-audios:
     - pip install .[server,gpu,test]
   script:
     - export W2V_GPU=true
+    - pytest tests/functional/test_streaming_requests.py --verbose --capture=no
     - pytest tests/functional/test_long_files.py --verbose
 
 
