--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ dependencies = [
 ]
 
 [tool.pytest.ini_options]
-addopts = "--ignore=tests/functional/test_long_files.py"
+addopts = "--ignore=tests/functional/test_long_files.py --ignore=tests/functional/test_streaming_requests.py"
 
 [tool.setuptools]
 include-package-data = false
