Feature: Added missing 'pause' dependency.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,5 +76,6 @@ test = [
     "pytest >= 6.2.5",
     "pytest-cov >= 3.0.0",
     "jiwer >= 2.5.1",
-    "mock >= 5.1.0"
+    "mock >= 5.1.0",
+    "pause >= 0.3"
 ]
