--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "asr4"
+name = "asr4_streaming"
 version = "0.6.5"
 authors = ["Jordi Adell <jadell@verbio.com>", "Leo Fanzeres <lfanzeres@verbio.com>", "Lluís Formiga <lformiga@verbio.com>", "Lara Gil <lgil@verbio.com>", "Pere Comas <pcomas@verbio.com>", "Vero Lopez <vlopez@verbio.com>", "Roger Marrugat <rmarrugat@verbio.com>" ]
 edition = "2021"
