--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -126,7 +126,7 @@ functional-testing:e2e:
     - deactivate
     - python -m venv venv-client
     - . ./venv-client/bin/activate
-    - pip install .[client,cpu]
+    - pip install .[client]
     - ./tests/e2e/run_metrics.sh en-us 0.0.0.0:50051 tests/e2e/data/test_en-us_upgraded-small.gui tests/e2e/data/expected_metrics_functional_testing.json
 
 
