--- a/asr4_streaming_config_es.toml
+++ b/asr4_streaming_config_es.toml
@@ -1,7 +1,7 @@
 [global]
 language = "es"
-model = "w2v-es-1.3.0.onnx"
-vocabulary = "w2v-es-1.3.0.dict.ltr.txt"
+model = "w2v-es-1.4.0.onnx"
+vocabulary = "w2v-es-1.4.0.dict.ltr.txt"
 lm_algorithm = "kenlm"
 lm_model = "w2v-es-lm-1.2.0.bin"
 lexicon = "w2v-es-lm-1.2.0.lexicon.txt"
@@ -11,10 +11,13 @@ workers = 0
 verbose = "INFO"
 host = "[::]"
 port = 50051
-cpu_version = "1.3.0"
-gpu_version = "1.3.0"
+cpu_version = "1.4.0"
+gpu_version = "1.4.0"
 lm_version = "1.2.0"
 lm_weight = "0.91447"
 word_score = "-0.56194"
 sil_score = "0.44272"
 formatter = "format-model.es.fm"
+local_formatting = "true"
+overlap = "65"
+stride = "32"
